--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.3",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.12",
+    "socket.io": "^4.0.1",
     "validator": "^13.6.0"
   }
 }
