--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tejas Kolwankar",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
