--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
     "js-cookie": "^3.0.1",
     "js-cookies": "^1.0.4",
     "react": "^17.0.2",
@@ -17,6 +18,7 @@
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.2"
   },
+  "author": "Tejas Kolwankar",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
